--- a/tabsyncedrecyclerview/src/main/res/values/strings.xml
+++ b/tabsyncedrecyclerview/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TabSyncedAdapter</string>
+    <string name="app_name">TabSyncedRecyclerView</string>
 </resources>
